--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,19 @@
 .my-swal-popup {
   z-index: 99999 !important;
 }
+
+
+.spinner {
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #e50914; /* Red */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
